--- a/kubernetes/apps/home/scrypted/app/helmrelease.yaml
+++ b/kubernetes/apps/home/scrypted/app/helmrelease.yaml
@@ -60,6 +60,7 @@ spec:
         ports:
           http:
             port: 11080
+            primary: true
           rebroadcast:
             port: 34135
     ingress:
