--- a/kubernetes/apps/media/immich/app/secret.sops.yaml
+++ b/kubernetes/apps/media/immich/app/secret.sops.yaml
@@ -1,43 +1,82 @@
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+    name: immich
+spec:
+    secretStoreRef:
+        kind: ClusterSecretStore
+        name: onepassword-connect
+    target:
+        name: immich-secret
+        template:
+            engineVersion: v2
+            data:
+                JWT_SECRET: ENC[AES256_GCM,data:bZ5wvz0MTjkwSPfsuVAtql9l5YbQLhql,iv:DMsx0GzeuoC1+LXjyurgsLatT2PM5+XeLoF5gyk12C4=,tag:EuQTY4RGG+Ucl7po3McVkQ==,type:str]
+                REDIS_PASSWORD: ENC[AES256_GCM,data:91u0NPyzwLVZXjU9qS9QdLbUHXy1,iv:tA2lwhzNQAjYK3c7eevv2h5fKDOIV1LMJ9W+SPz8nk0=,tag:h6RkvvBE+XoPrTnHWH+FEw==,type:str]
+    dataFrom:
+        - extract:
+            key: immich
+        - extract:
+            key: redis
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1rzxy9s9prfhu2ceqrt9hexs3tl402d7j2haumxl0lpn2pfycle6sz5kefj
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmekVBUUpabVVtVUpLNGRj
+            OUp1TmtobXVUOWZBWFNmUnZLQTZmK0tETXl3Cm8vUloyVzJteWNac0pIZ2p4Z1BC
+            RUkrVFF3VzZpSTZMMHQ4ZnlPMlpOUDgKLS0tIDA1dHhNY1prYllPYzRwUDdXMVV1
+            TlQxa1pmRmFGZExHajN2UTMxbTQwcTQKFWOt35scEaQXoLhFPHn9tLiGnGVPQvcE
+            G0QQSS31P9N3qgYUmFcxCPaR4qj8n8iqmTfDzhuWFpbsJJiuqXrQkA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-10T21:04:55Z"
+    mac: ENC[AES256_GCM,data:x+N0ySI6PnkF3LZuIiZwY5NFJZej2VZqeMc3cU/4HFfaArCf99TlZuplBe415HnYKjg5DjaMUx1Lvwg7+A7YOZG+hM25J/74okKE4XBOjDE0loIwD6QRwfdX8G8MUiyp/3LcaEAhMiXD0yL78XrqJFrBu5ZfJ2Lcv9mA1Q+5fmM=,iv:5pZ4Z5SBvhlzszlU4hx09l9JDKPKNFxqcRSWZ57ZP8U=,tag:PNnBsuB1TYCisToorCcfpA==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.8.1
 ---
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: immich
+    name: immich-db
 spec:
-  secretStoreRef:
-    kind: ClusterSecretStore
-    name: onepassword-connect
-  target:
-    name: immich-secret
-    template:
-      engineVersion: v2
-      data:
-        JWT_SECRET: "{{ .IMMICH_SECRET_KEY }}"
-        REDIS_PASSWORD: "{{ .REDIS_PASSWORD }}"
-  dataFrom:
-    - extract:
-        key: immich
-    - extract:
-        key: redis
----
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: immich-db
-spec:
-  secretStoreRef:
-    kind: ClusterSecretStore
-    name: crunchy-pgo-secrets
-  target:
-    name: immich-db-secret
-    template:
-      engineVersion: v2
-      data:
-        DB_HOSTNAME: '{{ index . "pgbouncer-host" }}'
-        DB_PORT: '{{ index . "pgbouncer-port" }}'
-        DB_USERNAME: '{{ index . "user" }}'
-        DB_PASSWORD: '{{ index . "password" }}'
-        DB_DATABASE_NAME: '{{ index . "dbname" }}'
-  dataFrom:
-    - extract:
-        key: postgres-vector-pguser-immich
+    secretStoreRef:
+        kind: ClusterSecretStore
+        name: crunchy-pgo-secrets
+    target:
+        name: immich-db-secret
+        template:
+            engineVersion: v2
+            data:
+                DB_HOSTNAME: ENC[AES256_GCM,data:1N9+/Tq9yEzCk1GOADf3qjBl9uOZxIcaCm6NquNn,iv:3qlDHWdnrkxJxUq8E4WJu/62gROltT7IbOEO6XAG6VA=,tag:nLOkj16fR2C6vXTichKqSw==,type:str]
+                DB_PORT: ENC[AES256_GCM,data:qmT96sbvW4uPwYsxd8Mk8J7CmEmrC2NKd6BrHcFb,iv:6C7NrFZYFs6e7EoYRnW7YNt4vTt/vWYhpvGpmSg4j/8=,tag:mPmrVk6ieI/24jCGXqvbyw==,type:str]
+                DB_USERNAME: ENC[AES256_GCM,data:ItKsa1bxHFJvDn5BHIgbqkpV3SY=,iv:oUqHZsjK4kmUTdliSjyUyf9jR+pvPnrOTfdeOLewK08=,tag:rNkqhp3TLs1qtxQlYTGirw==,type:str]
+                DB_PASSWORD: ENC[AES256_GCM,data:z6ZpeppCsomaaqqAWqOWbNyWUzaPi8hg,iv:EsVu1eNCHVRHuPy3D9Cupql0nfd5AF06mdLYOwx8uo0=,tag:yW2e0vP0i1b2YcEUQWJB8w==,type:str]
+                DB_DATABASE_NAME: ENC[AES256_GCM,data:6oML9hH2tafUNlGdxXWwvHzc7kqvYg==,iv:v549sriIIpAAg0+2ACU9WR6KIfdfN8gqyCP1rOg4LDo=,tag:gxmBsOyfB9/vcYtktGbORA==,type:str]
+    dataFrom:
+        - extract:
+            key: postgres-vector-pguser-immich
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1rzxy9s9prfhu2ceqrt9hexs3tl402d7j2haumxl0lpn2pfycle6sz5kefj
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmekVBUUpabVVtVUpLNGRj
+            OUp1TmtobXVUOWZBWFNmUnZLQTZmK0tETXl3Cm8vUloyVzJteWNac0pIZ2p4Z1BC
+            RUkrVFF3VzZpSTZMMHQ4ZnlPMlpOUDgKLS0tIDA1dHhNY1prYllPYzRwUDdXMVV1
+            TlQxa1pmRmFGZExHajN2UTMxbTQwcTQKFWOt35scEaQXoLhFPHn9tLiGnGVPQvcE
+            G0QQSS31P9N3qgYUmFcxCPaR4qj8n8iqmTfDzhuWFpbsJJiuqXrQkA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-10T21:04:55Z"
+    mac: ENC[AES256_GCM,data:x+N0ySI6PnkF3LZuIiZwY5NFJZej2VZqeMc3cU/4HFfaArCf99TlZuplBe415HnYKjg5DjaMUx1Lvwg7+A7YOZG+hM25J/74okKE4XBOjDE0loIwD6QRwfdX8G8MUiyp/3LcaEAhMiXD0yL78XrqJFrBu5ZfJ2Lcv9mA1Q+5fmM=,iv:5pZ4Z5SBvhlzszlU4hx09l9JDKPKNFxqcRSWZ57ZP8U=,tag:PNnBsuB1TYCisToorCcfpA==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.8.1
