--- a/kubernetes/apps/home/home-assistant/ha-fusion/helmrelease.yaml
+++ b/kubernetes/apps/home/home-assistant/ha-fusion/helmrelease.yaml
@@ -86,7 +86,7 @@ spec:
       app:
         className: internal
         hosts:
-          - host: *host
+          - host: homedash.${SECRET_DOMAIN}
             paths:
               - path: /
                 service:
