--- a/kubernetes/apps/home/home-assistant/ha-fusion/helmrelease.yaml
+++ b/kubernetes/apps/home/home-assistant/ha-fusion/helmrelease.yaml
@@ -48,7 +48,7 @@ spec:
               pullPolicy: IfNotPresent
             env:
               TZ: "${TIMEZONE}"
-              HASS_URL: http://home-assistant.home.svc.cluster.local:8123
+              HASS_URL: https://hass.skynerv.com
             probes:
               liveness:
                 enabled: true
