--- a/kubernetes/apps/home/frigate/app/kustomization.yaml
+++ b/kubernetes/apps/home/frigate/app/kustomization.yaml
@@ -13,3 +13,5 @@ configMapGenerator:
       - config.yml=./resources/config.yml
 generatorOptions:
   disableNameSuffixHash: true
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: disabled
