--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -61,7 +61,7 @@ ffmpeg:
 detect:
   width: 640
   height: 360
-  fps: 10
+  fps: 5
   enabled: True
 
 objects:
@@ -159,7 +159,7 @@ cameras:
     detect:
       width: 848
       height: 480
-      fps: 8
+      fps: 5
       enabled: True
     live:
       stream_name: gates_hq
@@ -184,13 +184,14 @@ cameras:
       guests:
         coordinates: 0.758,0.398,0.607,0.437,0.396,0.797,0.514,0.944
         inertia: 5
-        loitering_time: 5
+        loitering_time: 6
         objects:
           - person
     motion:
       mask:
         - 0,0.069,0.072,0,0.17,0,0.725,0,0.581,0.169,0.459,0.07,0.13,0.445,0.187,0.692,0,0.939
         - 0.487,1,0.501,0.952,0.376,0.798,0.601,0.415,0.711,0.381,0.744,0.235,0.771,0.15,0.835,0.158,0.887,0,0.732,0,0.58,0.177,0,0.948,0,1
+        - 0.817,0.537,0.994,0.786,0.998,0.003,0.893,0.004,0.831,0.19,0.8,0.426
     review:
       alerts:
         labels:
@@ -237,7 +238,8 @@ cameras:
       quality: 1
     webui_url: "https://192.168.108.104/"
     motion:
-      mask: []
+      mask:
+        - 0.815,0.21,0.671,0.164,0.595,0.229,0.562,0.371,0.53,0.373,0.514,0.007,0.997,0,0.998,0.128,0.829,0.128
     zones:
       near_the_door:
         coordinates: 0.248,1,0.805,1,0.808,0.906,0.328,0.881
@@ -277,9 +279,21 @@ cameras:
       alerts:
         labels:
           - person
+        required_zones:
+          - near_the_door
+          - dvor
+          - tropinka
+          - parkovka
+          - sad
       detections:
         labels:
           - person
+        required_zones:
+          - near_the_door
+          - dvor
+          - tropinka
+          - parkovka
+          - sad
     mqtt:
       enabled: True
       timestamp: False
@@ -305,7 +319,7 @@ cameras:
     detect:
       width: 848
       height: 480
-      fps: 8
+      fps: 5
       enabled: True
     live:
       stream_name: dvor_gates_hq
@@ -345,10 +359,20 @@ cameras:
         labels:
           - car
           - person
+        required_zones:
+          - before_gates
+          - at_the_door
+          - in_the_garden
+          - driveway
       detections:
         labels:
           - car
           - person
+        required_zones:
+          - before_gates
+          - at_the_door
+          - in_the_garden
+          - driveway
     mqtt:
       enabled: True
       timestamp: False
@@ -376,7 +400,8 @@ cameras:
       quality: 1
     webui_url: "http://192.168.108.122:8899/"
     motion:
-      mask: []
+      mask:
+        - 0.04,0.991,0.001,0.996,0.001,0.001,0.996,0.003,0.999,0.996,0.892,0.554,0.804,0.154,0.483,0.154,0.351,0.456,0.276,0.538,0.121,0.547
     zones:
       kacheli:
         coordinates: 0.658,0.567,0.655,0.311,0.817,0.308,0.886,0.556
@@ -400,9 +425,17 @@ cameras:
       alerts:
         labels:
           - person
+        required_zones:
+          - kacheli
+          - dom2_tropinka
+          - lavka
       detections:
         labels:
           - person
+        required_zones:
+          - kacheli
+          - dom2_tropinka
+          - lavka
     mqtt:
       enabled: True
       timestamp: False
@@ -429,7 +462,8 @@ cameras:
       stream_name: street_hq
       quality: 1
     motion:
-      mask: []
+      mask:
+        - 0.205,0.787,0.31,0.416,0.479,0.407,0.48,0.318,0.492,0.226,0.551,0.213,0.631,0.125,0.655,0.004,0.001,0.001,0.002,0.387
     zones:
       u_okna:
         coordinates: 0,1,0,0.425,0.199,0.796,0.141,1
