--- a/kubernetes/apps/home/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/home/frigate/app/helmrelease.yaml
@@ -34,6 +34,7 @@ spec:
   values:
     defaultPodOptions:
       runtimeClassName: nvidia
+      hostNetwork: true
     controllers:
       main:
         annotations:
