--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -8,16 +8,20 @@ mqtt:
   user: "{FRIGATE_MQTT_USERNAME}"
   password: "{FRIGATE_MQTT_PASSWORD}"
   stats_interval: 30
+
 detectors:
   coral:
     type: edgetpu
     device: usb
+
 database:
   path: /data/frigate.db
+
+tls:
+  enabled: False
+
 audio:
   enabled: True
-  max_not_heard: 30
-  min_volume: 500
   listen:
     - bark
     - fire_alarm
@@ -27,39 +31,39 @@ audio:
   filters:
     speech:
       threshold: 0.8
-    scream:
-      threshold: 0.8
-    yell:
-      threshold: 0.8
-    bark:
-      threshold: 0.8
-    fire_alarm:
-      threshold: 0.8
+
 logger:
   default: warning
   logs:
     frigate.event: debug
+
+auth:
+  enabled: false
+
 birdseye:
   enabled: True
   restream: False
-  width: 1920
-  height: 1080
+  width: 2304
+  height: 1296
   quality: 1
   #   objects - cameras are included if they have had a tracked object within the last 30 seconds
   #   motion - cameras are included if motion was detected in the last 30 seconds
   #   continuous - all cameras are included always
   mode: continuous
+
 ffmpeg:
   global_args: -hide_banner -loglevel warning -threads 2
   hwaccel_args: preset-nvidia-h264
   output_args:
-    detect: -threads 2 -f rawvideo -pix_fmt yuv420p -an
+    detect: -threads 2 -f rawvideo -pix_fmt yuv420p
     record: preset-record-generic-audio-copy
+
 detect:
   width: 640
   height: 360
-  fps: 10
+  fps: 5
   enabled: True
+
 objects:
   track:
     - person
@@ -67,6 +71,12 @@ objects:
     - car
     - bus
     - cat
+  filters:
+    person:
+      min_area: 5000
+      max_area: 100000
+      threshold: 0.7
+
 record:
   enabled: True
   expire_interval: 60
@@ -76,17 +86,20 @@ record:
     mode: all
   export:
     timelapse_args: "-vf setpts=0.04*PTS -r 30"
+  preview:
+    quality: very_high
   events:
     pre_capture: 5
     post_capture: 5
     retain:
       default: 30
       mode: active_objects
+
 snapshots:
   enabled: True
-  clean_copy: True
+  clean_copy: False
   timestamp: False
-  bounding_box: True
+  bounding_box: False
   crop: False
   required_zones: []
   retain:
@@ -95,38 +108,42 @@ snapshots:
       person: 30
       car: 30
   quality: 90
+
 go2rtc:
   streams:
     gates_hq:
       - rtsp://admin:12332145@192.168.108.104:554/stream1
-      - "ffmpeg:gates_hq#audio=aac"
+      - "ffmpeg:gates_hq#audio=copy#audio=opus#audio=aac"
     gates_lq:
       - rtsp://admin:12332145@192.168.108.104:554/stream2
-      - "ffmpeg:gates_lq#audio=aac"
+      - "ffmpeg:gates_lq#audio=copy#audio=opus#audio=aac"
     door_hq:
-      - ffmpeg:rtsp://user:12332145@192.168.108.101:554/ch0_0#video=h264#hardware#audio=aac
+      - ffmpeg:rtsp://user:12332145@192.168.108.101:554/ch0_0#video=h264#hardware#audio=copy#audio=opus#audio=aac
     door_lq:
-      - ffmpeg:rtsp://user:12332145@192.168.108.101:554/ch0_1#video=h264#hardware#audio=aac
+      - ffmpeg:rtsp://user:12332145@192.168.108.101:554/ch0_1#video=h264#hardware#audio=copy#audio=opus#audio=aac
     dvor_gates_hq:
       - rtsp://admin:12332145@192.168.108.210:554/stream1
-      - "ffmpeg:dvor_gates_hq#audio=aac"
+      - "ffmpeg:dvor_gates_hq#audio=copy#audio=opus#audio=aac"
     dvor_gates_lq:
       - rtsp://admin:12332145@192.168.108.210:554/stream2
-      - "ffmpeg:dvor_gates_lq#audio=aac"
+      - "ffmpeg:dvor_gates_lq#audio=copy#audio=opus#audio=aac"
     dom2_hq:
-      - ffmpeg:rtsp://user:12332145@192.168.108.190:554/ch0_0#video=h264#hardware=cuda#audio=aac
+      - ffmpeg:rtsp://user:12332145@192.168.108.190:554/ch0_0#video=h264#hardware=cuda#audio=copy#audio=opus#audio=aac
     dom2_lq:
-      - ffmpeg:rtsp://user:12332145@192.168.108.190:554/ch0_1#video=h264#hardware=cuda#audio=aac
-    street_hq:
-      - rtsp://admin:12332145@192.168.108.175:8554/Streaming/Channels/101
-      - "ffmpeg:street_hq#video=copy#audio=aac"
-    street_lq:
-      - rtsp://admin:12332145@192.168.108.175:8554/Streaming/Channels/102
-      - "ffmpeg:street_lq#video=copy#audio=aac"
+      - ffmpeg:rtsp://user:12332145@192.168.108.190:554/ch0_1#video=h264#hardware=cuda#audio=copy#audio=opus#audio=aac
+    # street_hq:
+    #   - rtsp://admin:12332145@192.168.108.175:8554/Streaming/Channels/101
+    #   - "ffmpeg:street_hq#video=copy#audio=copy#audio=opus#audio=aac"
+    # street_lq:
+    #   - rtsp://admin:12332145@192.168.108.175:8554/Streaming/Channels/102
+    #   - "ffmpeg:street_lq#video=copy#audio=copy#audio=opus#audio=aac"
   webrtc:
     candidates:
       - 192.168.108.55:8555
+      # - 192.168.108.199:8555
+      # - 192.168.108.200:8555
       - stun:8555
+
 cameras:
   gates:
     enabled: True
@@ -144,7 +161,7 @@ cameras:
     detect:
       width: 848
       height: 480
-      fps: 8
+      fps: 5
       enabled: True
     live:
       stream_name: gates_hq
@@ -152,27 +169,50 @@ cameras:
     webui_url: ""
     zones:
       inside_gates:
-        coordinates: 797,423,802,368,735,307,674,265,630,332
-        inertia: 16
+        coordinates: 0.94,0.881,0.946,0.767,0.867,0.64,0.795,0.552,0.743,0.692
+        inertia: 5
+        loitering_time: 3
         objects:
           - person
           - dog
           - car
       entryway:
-        coordinates: 484,82,391,41,118,218,164,332
-        inertia: 40
+        coordinates: 0.571,0.171,0.461,0.085,0.139,0.454,0.187,0.682
+        inertia: 5
+        loitering_time: 5
         objects:
           - car
           - bus
       guests:
-        coordinates: 596,249,513,221,365,370,436,453
-        inertia: 48
+        coordinates: 0.758,0.398,0.607,0.437,0.396,0.797,0.514,0.944
+        inertia: 5
+        loitering_time: 6
         objects:
           - person
     motion:
       mask:
-        - 0,33,61,0,144,0,622,0,493,81,409,33,118,233,161,334,0,480
-        - 413,480,425,457,319,383,510,199,603,183,631,113,654,72,708,76,752,0,621,0,492,85,0,455,0,480
+        - 0,0.069,0.072,0,0.17,0,0.725,0,0.581,0.169,0.459,0.07,0.13,0.445,0.187,0.692,0,0.939
+        - 0.487,1,0.501,0.952,0.376,0.798,0.601,0.415,0.711,0.381,0.744,0.235,0.771,0.15,0.835,0.158,0.887,0,0.732,0,0.58,0.177,0,0.948,0,1
+        - 0.817,0.537,0.994,0.786,0.998,0.003,0.893,0.004,0.831,0.19,0.8,0.426
+    review:
+      alerts:
+        labels:
+          - car
+          - person
+          - bus
+        required_zones:
+          - entryway
+          - guests
+          - inside_gates
+      detections:
+        labels:
+          - car
+          - person
+          - bus
+        required_zones:
+          - entryway
+          - guests
+          - inside_gates
     mqtt:
       enabled: True
       timestamp: True
@@ -198,47 +238,64 @@ cameras:
     live:
       stream_name: door_hq
       quality: 1
-    webui_url: "http://192.168.108.150:8899/"
+    webui_url: "https://192.168.108.104/"
     motion:
-      mask: []
+      mask:
+        - 0.815,0.21,0.671,0.164,0.595,0.229,0.562,0.371,0.53,0.373,0.514,0.007,0.997,0,0.998,0.128,0.829,0.128
     zones:
       near_the_door:
-        coordinates: 159,360,515,360,517,326,210,317
-        inertia: 10
+        coordinates: 0.248,1,0.805,1,0.808,0.906,0.328,0.881
+        inertia: 5
+        loitering_time: 3
         objects:
           - person
           - dog
           - car
       dvor:
-        coordinates: 513,151,389,147,327,212,269,267,484,298
-        inertia: 10
+        coordinates: 0.784,0.478,0.608,0.408,0.511,0.589,0.384,0.792,0.756,0.819
+        inertia: 5
         objects:
           - car
           - person
       tropinka:
-        coordinates: 576,203,591,47,553,51,539,197
-        inertia: 10
+        coordinates: 0.894,0.565,0.87,0.145,0.831,0.146,0.818,0.547
+        inertia: 5
+        loitering_time: 3
         objects:
           - person
           - dog
       parkovka:
-        coordinates: 516,171,516,94,395,80,363,138
-        inertia: 10
+        coordinates: 0.806,0.475,0.806,0.261,0.617,0.222,0.567,0.383
+        inertia: 5
         objects:
           - person
           - dog
       sad:
-        coordinates: 337,193,326,0,68,67,0,89,0,360,125,360
-        inertia: 10
+        coordinates: 0.527,0.536,0.509,0,0.106,0.186,0,0.247,0,1,0.195,1
+        inertia: 5
         objects:
           - person
           - dog
           - cat
-    objects:
-      filters:
-        dog:
-          mask:
-            - 470,360,502,257,515,156,384,136,333,207,162,360
+    review:
+      alerts:
+        labels:
+          - person
+        required_zones:
+          - near_the_door
+          - dvor
+          - tropinka
+          - parkovka
+          - sad
+      detections:
+        labels:
+          - person
+        required_zones:
+          - near_the_door
+          - dvor
+          - tropinka
+          - parkovka
+          - sad
     mqtt:
       enabled: True
       timestamp: False
@@ -264,42 +321,60 @@ cameras:
     detect:
       width: 848
       height: 480
-      fps: 8
+      fps: 5
       enabled: True
     live:
       stream_name: dvor_gates_hq
       quality: 1
-    webui_url: "http://192.168.108.210:8899/"
+    webui_url: "https://192.168.108.210/"
     motion:
       mask: []
     zones:
       before_gates:
-        coordinates: 320,198,522,186,498,21,382,21,353,30,358,77
-        inertia: 10
+        coordinates: 0.377,0.412,0.616,0.388,0.587,0.044,0.45,0.044,0.416,0.062,0.422,0.16
+        inertia: 5
+        loitering_time: 3
         objects:
           - person
           - car
       at_the_door:
-        coordinates: 158,314,261,320,296,177,215,184
-        inertia: 10
+        coordinates: 0.186,0.654,0.308,0.667,0.349,0.369,0.254,0.383
+        inertia: 5
+        loitering_time: 3
         objects:
           - person
       in_the_garden:
-        coordinates: 848,480,848,74,714,21,583,0,508,41,612,480
-        inertia: 10
+        coordinates: 1,1,1,0.154,0.842,0.044,0.688,0,0.599,0.085,0.722,1
+        inertia: 5
+        loitering_time: 2
         objects:
           - person
       driveway:
-        coordinates: 201,480,592,480,520,198,302,204
-        inertia: 10
+        coordinates: 0.237,1,0.698,1,0.613,0.412,0.356,0.425
+        inertia: 5
+        loitering_time: 2
         objects:
           - person
           - car
-    objects:
-      filters:
-        dog:
-          mask:
-            - 440,360,372,0,284,0,161,360
+    review:
+      alerts:
+        labels:
+          - car
+          - person
+        required_zones:
+          - before_gates
+          - at_the_door
+          - in_the_garden
+          - driveway
+      detections:
+        labels:
+          - car
+          - person
+        required_zones:
+          - before_gates
+          - at_the_door
+          - in_the_garden
+          - driveway
     mqtt:
       enabled: True
       timestamp: False
@@ -327,23 +402,42 @@ cameras:
       quality: 1
     webui_url: "http://192.168.108.122:8899/"
     motion:
-      mask: []
+      mask:
+        - 0.04,0.991,0.001,0.996,0.001,0.001,0.996,0.003,0.999,0.996,0.892,0.554,0.804,0.154,0.483,0.154,0.351,0.456,0.276,0.538,0.121,0.547
     zones:
       kacheli:
-        coordinates: 421,204,419,112,523,111,567,200
-        inertia: 10
+        coordinates: 0.658,0.567,0.655,0.311,0.817,0.308,0.886,0.556
+        inertia: 5
+        loitering_time: 3
         objects:
           - person
       dom2_tropinka:
-        coordinates: 333,127,382,127,488,360,383,360
-        inertia: 10
+        coordinates: 0.52,0.353,0.597,0.353,0.762,1,0.598,1
+        inertia: 5
+        loitering_time: 2
         objects:
           - person
       lavka:
-        coordinates: 81,200,282,196,282,360,34,360
-        inertia: 10
+        coordinates: 0.127,0.556,0.441,0.544,0.441,1,0.053,1
+        inertia: 5
+        loitering_time: 2
         objects:
           - person
+    review:
+      alerts:
+        labels:
+          - person
+        required_zones:
+          - kacheli
+          - dom2_tropinka
+          - lavka
+      detections:
+        labels:
+          - person
+        required_zones:
+          - kacheli
+          - dom2_tropinka
+          - lavka
     mqtt:
       enabled: True
       timestamp: False
@@ -353,57 +447,72 @@ cameras:
       quality: 100
     birdseye:
       order: 3
-  street:
-    enabled: True
-    ffmpeg:
-      inputs:
-        - path: rtsp://localhost:8554/street_hq
-          input_args: preset-rtsp-restream
-          roles:
-            - record
-            - audio
-        - path: rtsp://localhost:8554/street_lq
-          input_args: preset-rtsp-restream
-          roles:
-            - detect
-    live:
-      stream_name: street_hq
-      quality: 1
-    webui_url: "https://192.168.108.104/"
-    motion:
-      mask: []
-    zones:
-      u_okna:
-        coordinates: 0,360,0,194,112,310,90,360
-        inertia: 10
-        objects:
-          - person
-      za_zaborom:
-        coordinates: 310,128,354,118,401,360,315,360
-        inertia: 10
-        objects:
-          - person
-      pod_oknami:
-        coordinates: 201,153,297,149,282,360,97,360
-        inertia: 10
-        objects:
-          - person
-    mqtt:
-      enabled: True
-      timestamp: False
-      bounding_box: True
-      crop: True
-      height: 500
-      quality: 100
-    birdseye:
-      order: 4
+  # street:
+  #   enabled: True
+  #   ffmpeg:
+  #     inputs:
+  #       - path: rtsp://localhost:8554/street_hq
+  #         input_args: preset-rtsp-restream
+  #         roles:
+  #           - record
+  #           - audio
+  #       - path: rtsp://localhost:8554/street_lq
+  #         input_args: preset-rtsp-restream
+  #         roles:
+  #           - detect
+  #   live:
+  #     stream_name: street_hq
+  #     quality: 1
+  #   motion:
+  #     mask:
+  #       - 0.205,0.787,0.31,0.416,0.479,0.407,0.48,0.318,0.492,0.226,0.551,0.213,0.631,0.125,0.655,0.004,0.001,0.001,0.002,0.387
+  #   zones:
+  #     u_okna:
+  #       coordinates: 0,1,0,0.425,0.199,0.796,0.141,1
+  #       inertia: 5
+  #       objects:
+  #         - person
+  #     za_zaborom:
+  #       coordinates: 0.484,0.326,0.553,0.328,0.627,1,0.492,1
+  #       inertia: 5
+  #       objects:
+  #         - person
+  #     pod_oknami:
+  #       coordinates: 0.314,0.425,0.464,0.414,0.441,1,0.152,1
+  #       inertia: 5
+  #       objects:
+  #         - person
+  #   review:
+  #     alerts:
+  #       labels:
+  #         - person
+  #       required_zones:
+  #         - u_okna
+  #         - za_zaborom
+  #         - pod_oknami
+  #     detections:
+  #       labels:
+  #         - person
+  #       required_zones:
+  #         - u_okna
+  #         - za_zaborom
+  #         - pod_oknami
+  #   mqtt:
+  #     enabled: True
+  #     timestamp: False
+  #     bounding_box: True
+  #     crop: True
+  #     height: 500
+  #     quality: 100
+  #   birdseye:
+  #     order: 4
+
 ui:
-  live_mode: mse
-  use_experimental: False
   time_format: browser
   date_style: short
   time_style: medium
   strftime_fmt: "%Y/%m/%d %H:%M"
+
 telemetry:
   network_interfaces:
     - eth
@@ -414,6 +523,17 @@ telemetry:
     - lo
   stats:
     amd_gpu_stats: False
-    intel_gpu_stats: False
+    intel_gpu_stats: True
     network_bandwidth: False
   version_check: True
+
+camera_groups:
+  outside:
+    cameras:
+      - gates
+      - dvor_gates
+      - dom2
+      - street
+      - door
+    icon: LuCar
+    order: 0
