--- a/kubernetes/apps/home/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/home/frigate/app/helmrelease.yaml
@@ -33,6 +33,7 @@ spec:
       namespace: storage
   values:
     defaultPodOptions:
+      hostNetwork: true
       runtimeClassName: nvidia
     controllers:
       main:
