--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -49,7 +49,7 @@ spec:
         replicationFactor: 2
         # Storage backend
         vmstorage:
-          replicaCount: 1 # HA - but prefer 3 as i have 3 notes & using local-hostpath
+          replicaCount: 3 # HA - but prefer 3 as i have 3 notes & using local-hostpath
           # required for HA vmagents
           extraArgs:
             dedup.minScrapeInterval: 60s # Only needed for HA
@@ -69,10 +69,10 @@ spec:
           storage:
             volumeClaimTemplate:
               spec:
-                storageClassName: longhorn-fast
+                storageClassName: local-hostpath
                 resources:
                   requests:
-                    storage: 50Gi
+                    storage: 25Gi
         # Query backend
         vmselect:
           replicaCount: 2 # HA
