--- a/kubernetes/apps/media/immich/app/configmap.yaml
+++ b/kubernetes/apps/media/immich/app/configmap.yaml
@@ -3,19 +3,18 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: immich-configmap
-  namespace: default
+  namespace: media
 data:
   # URLS
-  IMMICH_SERVER_URL: http://immich-server.default.svc.cluster.local:3001
-  IMMICH_MACHINE_LEARNING_URL: http://immich-machine-learning.default.svc.cluster.local:3003
-  PUBLIC_IMMICH_SERVER_URL: https://immich.${SECRET_DOMAIN}
+  IMMICH_SERVER_URL: http://immich-server.media.svc.cluster.local:3001
+  IMMICH_MACHINE_LEARNING_URL: http://immich-machine-learning.media.svc.cluster.local:3003
+  PUBLIC_IMMICH_SERVER_URL: https://photos.${SECRET_DOMAIN}
   # SETTINGS
-  DISABLE_REVERSE_GEOCODING: "true"
-  ENABLE_MAPBOX: "false"
+  DB_PORT: "5432"
   LOG_LEVEL: log
   NODE_ENV: production
   UPLOAD_LOCATION: /usr/src/app/upload
   # REDIS
-  REDIS_HOSTNAME: dragonfly.database.svc.cluster.local
-  REDIS_DBINDEX: "1"
+  REDIS_HOSTNAME: redis-sentinel-master.database.svc.cluster.local
+  REDIS_DBINDEX: "38"
   REDIS_PORT: "6379"
