--- a/kubernetes/apps/media/immich/app/microservices/pvc.yaml
+++ b/kubernetes/apps/media/immich/app/microservices/pvc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: immich-machine-learning-cache
+  name: immich-upload
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 10Gi
-  storageClassName: ceph-block
+      storage: 200Gi
+  storageClassName: longhorn-ssd
