--- a/kubernetes/apps/media/immich/app/secret.sops.yaml
+++ b/kubernetes/apps/media/immich/app/secret.sops.yaml
@@ -1,23 +1,20 @@
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
+apiVersion: v1
+kind: Secret
 metadata:
     name: immich
-spec:
-    secretStoreRef:
-        kind: ClusterSecretStore
-        name: onepassword-connect
-    target:
-        name: immich-secret
-        template:
-            engineVersion: v2
-            data:
-                JWT_SECRET: ENC[AES256_GCM,data:bZ5wvz0MTjkwSPfsuVAtql9l5YbQLhql,iv:DMsx0GzeuoC1+LXjyurgsLatT2PM5+XeLoF5gyk12C4=,tag:EuQTY4RGG+Ucl7po3McVkQ==,type:str]
-                REDIS_PASSWORD: ENC[AES256_GCM,data:91u0NPyzwLVZXjU9qS9QdLbUHXy1,iv:tA2lwhzNQAjYK3c7eevv2h5fKDOIV1LMJ9W+SPz8nk0=,tag:h6RkvvBE+XoPrTnHWH+FEw==,type:str]
-    dataFrom:
-        - extract:
-            key: immich
-        - extract:
-            key: redis
+stringData:
+    #ENC[AES256_GCM,data:es1wDVDasg==,iv:iPW4f/RL1D0N1sSnzL8YpT679M3Pmxtue6ynYtWeZX8=,tag:8I2NAzW0b/mdI2wTekvxKQ==,type:comment]
+    DB_DATABASE_NAME: ENC[AES256_GCM,data:MfacrKRghLA=,iv:hx5cMuOrPEc3fg6jw+j7nHoM+Ni6Iqr+5Ztqo0TNehg=,tag:/0AMsfFpvyQZs1mFB++FcQ==,type:str]
+    DB_HOSTNAME: ENC[AES256_GCM,data:mHdCVVEr+0affoCdnq0zeAZyDRJWJn1+wGbMaeDdOj8fL3PnVLo1nQ==,iv:QkTz9AjWROlhu1id4pH/VzOY6fCe9Vy2ldjFq+ZDFRw=,tag:4m1yYHVBH2jnzeBbd3PP+Q==,type:str]
+    DB_USERNAME: ENC[AES256_GCM,data:Q56844u4akdKxw==,iv:wtUScO5vCqP02C9ysKCFLFBygErDsaMmhpFcMJNp3qc=,tag:Ocf/nknPiNXCg/zrQ+D5OA==,type:str]
+    DB_PASSWORD: ENC[AES256_GCM,data:LPjC5Vrmw4xOMkos293T2b+Z4wQ=,iv:QstByJaphOCLthDKRmm16rm/KTlDyc9pXCszUtOSpfY=,tag:i8vFxbTqU89oxbAPYPo6fg==,type:str]
+    JWT_SECRET: ENC[AES256_GCM,data:ytSFSyO+hE5KiTBTBsMxXkeiY/7oTmU=,iv:jm3SAZHI5eaVYPWiMNtD9635XENVue52fx2hea+5SP4=,tag:/eL1PL00hApQPxdcPGfbkA==,type:str]
+    #ENC[AES256_GCM,data:xRZV2uxW6WyPf41HxJE=,iv:c0uFQQgBzcYvp+3ujmpC+c2Tk/p+N8l28Ik31fxi9dY=,tag:jQEw+BsFmHPZyMg8duAorg==,type:comment]
+    INIT_POSTGRES_DBNAME: ENC[AES256_GCM,data:1fQWWoqmvUA=,iv:Hyh3NDUkAiPBUZq6LSs/ILqTir5nCzeDMZLobkuuz7Y=,tag:yZmFkvOpG0D3XEdsMsb3mQ==,type:str]
+    INIT_POSTGRES_HOST: ENC[AES256_GCM,data:hGGdOkLqdvGZ6OMP8Gocu91aKqxQUGSrI0SUqfEMwbwDB0PsVrPaeQ==,iv:IoFfffv6oyH/EhgUPepBKatrGbgo6AsSiKbnMVbLUDA=,tag:ksB69BJAiT4H7cHRj0TNvg==,type:str]
+    INIT_POSTGRES_USER: ENC[AES256_GCM,data:lwutlUQ36uJ3WA==,iv:vLlWucbVUf1zFpzxwHS+rxJdoSlXu1Vpc5avLVqEzD8=,tag:MjAhuwNwd/Syo9txaNxPHA==,type:str]
+    INIT_POSTGRES_PASS: ENC[AES256_GCM,data:H2QaQMo5cF6d+Wg07ztB/mySJm4=,iv:Mz4zQwX4JXI0pV9lJz5OtSPdHq7vef5Gw/KOOeefC2o=,tag:QA4UdoOgzbZQSx2GOOW2nA==,type:str]
+    INIT_POSTGRES_SUPER_PASS: ENC[AES256_GCM,data:CzgD7X5XPHfAosMK3cM4eSuB08mflAxZXg==,iv:cK5P4AYQjObRHXGYpeWCe84kP63XmQBUbZ1kHLiW0oM=,tag:mIX2gCOd/EudMFU89FmBkA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -27,56 +24,14 @@ sops:
         - recipient: age1rzxy9s9prfhu2ceqrt9hexs3tl402d7j2haumxl0lpn2pfycle6sz5kefj
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmekVBUUpabVVtVUpLNGRj
-            OUp1TmtobXVUOWZBWFNmUnZLQTZmK0tETXl3Cm8vUloyVzJteWNac0pIZ2p4Z1BC
-            RUkrVFF3VzZpSTZMMHQ4ZnlPMlpOUDgKLS0tIDA1dHhNY1prYllPYzRwUDdXMVV1
-            TlQxa1pmRmFGZExHajN2UTMxbTQwcTQKFWOt35scEaQXoLhFPHn9tLiGnGVPQvcE
-            G0QQSS31P9N3qgYUmFcxCPaR4qj8n8iqmTfDzhuWFpbsJJiuqXrQkA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRRTloWkkrOVUvWmhoaVdM
+            OW45N3FDd0F3WlF0QWc5eDRja1oyNW5xTXpFCno0dzhmSWgrd2VwUGw3YVpuN2N2
+            eFhXTEI4c0FxeVc1WFBQNkNPTFJEbFEKLS0tICtDRzJ0eTZjOVluV2R4WGZwd3ZS
+            L3FmQzByN1RYUWk0RTA2N0h3NU13dDQKqr3SQSwn4dZokzOOMvfXq43X8VH3W86D
+            xA/LmESCF4Ha21oloczcKZ+URH/4oWoK8HvXGcDVnIH0SSQ1gJKuog==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-08-10T21:04:55Z"
-    mac: ENC[AES256_GCM,data:x+N0ySI6PnkF3LZuIiZwY5NFJZej2VZqeMc3cU/4HFfaArCf99TlZuplBe415HnYKjg5DjaMUx1Lvwg7+A7YOZG+hM25J/74okKE4XBOjDE0loIwD6QRwfdX8G8MUiyp/3LcaEAhMiXD0yL78XrqJFrBu5ZfJ2Lcv9mA1Q+5fmM=,iv:5pZ4Z5SBvhlzszlU4hx09l9JDKPKNFxqcRSWZ57ZP8U=,tag:PNnBsuB1TYCisToorCcfpA==,type:str]
+    lastmodified: "2024-08-25T23:48:46Z"
+    mac: ENC[AES256_GCM,data:CNJ7ta4FO6sBU+RzP7OoF5pJ4S+PGD8317rxnTTkmE+Q6B3uy5WxZ0DtEgLg0eFzdmbHfpPPmuy7/OtjT4bI0BdT+AXJgqI4TmatA1KKmVQKn4HXjoF/Ov5cqcY3IwSdQp87k6rcoIIHZa4/hmGApLuJf1JTERqsnmKv0/5hbgQ=,iv:xNs7RynZO5L9HQBr1P7ZAfkUtz6DnmWByaXMa7YCr8Q=,tag:3gpRn7tE6810iQQ49Ms0tw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.1
----
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-    name: immich-db
-spec:
-    secretStoreRef:
-        kind: ClusterSecretStore
-        name: crunchy-pgo-secrets
-    target:
-        name: immich-db-secret
-        template:
-            engineVersion: v2
-            data:
-                DB_HOSTNAME: ENC[AES256_GCM,data:1N9+/Tq9yEzCk1GOADf3qjBl9uOZxIcaCm6NquNn,iv:3qlDHWdnrkxJxUq8E4WJu/62gROltT7IbOEO6XAG6VA=,tag:nLOkj16fR2C6vXTichKqSw==,type:str]
-                DB_PORT: ENC[AES256_GCM,data:qmT96sbvW4uPwYsxd8Mk8J7CmEmrC2NKd6BrHcFb,iv:6C7NrFZYFs6e7EoYRnW7YNt4vTt/vWYhpvGpmSg4j/8=,tag:mPmrVk6ieI/24jCGXqvbyw==,type:str]
-                DB_USERNAME: ENC[AES256_GCM,data:ItKsa1bxHFJvDn5BHIgbqkpV3SY=,iv:oUqHZsjK4kmUTdliSjyUyf9jR+pvPnrOTfdeOLewK08=,tag:rNkqhp3TLs1qtxQlYTGirw==,type:str]
-                DB_PASSWORD: ENC[AES256_GCM,data:z6ZpeppCsomaaqqAWqOWbNyWUzaPi8hg,iv:EsVu1eNCHVRHuPy3D9Cupql0nfd5AF06mdLYOwx8uo0=,tag:yW2e0vP0i1b2YcEUQWJB8w==,type:str]
-                DB_DATABASE_NAME: ENC[AES256_GCM,data:6oML9hH2tafUNlGdxXWwvHzc7kqvYg==,iv:v549sriIIpAAg0+2ACU9WR6KIfdfN8gqyCP1rOg4LDo=,tag:gxmBsOyfB9/vcYtktGbORA==,type:str]
-    dataFrom:
-        - extract:
-            key: postgres-vector-pguser-immich
-sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age:
-        - recipient: age1rzxy9s9prfhu2ceqrt9hexs3tl402d7j2haumxl0lpn2pfycle6sz5kefj
-          enc: |
-            -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmekVBUUpabVVtVUpLNGRj
-            OUp1TmtobXVUOWZBWFNmUnZLQTZmK0tETXl3Cm8vUloyVzJteWNac0pIZ2p4Z1BC
-            RUkrVFF3VzZpSTZMMHQ4ZnlPMlpOUDgKLS0tIDA1dHhNY1prYllPYzRwUDdXMVV1
-            TlQxa1pmRmFGZExHajN2UTMxbTQwcTQKFWOt35scEaQXoLhFPHn9tLiGnGVPQvcE
-            G0QQSS31P9N3qgYUmFcxCPaR4qj8n8iqmTfDzhuWFpbsJJiuqXrQkA==
-            -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-08-10T21:04:55Z"
-    mac: ENC[AES256_GCM,data:x+N0ySI6PnkF3LZuIiZwY5NFJZej2VZqeMc3cU/4HFfaArCf99TlZuplBe415HnYKjg5DjaMUx1Lvwg7+A7YOZG+hM25J/74okKE4XBOjDE0loIwD6QRwfdX8G8MUiyp/3LcaEAhMiXD0yL78XrqJFrBu5ZfJ2Lcv9mA1Q+5fmM=,iv:5pZ4Z5SBvhlzszlU4hx09l9JDKPKNFxqcRSWZ57ZP8U=,tag:PNnBsuB1TYCisToorCcfpA==,type:str]
-    pgp: []
-    encrypted_regex: ^(data|stringData)$
-    version: 3.8.1
+    version: 3.9.0
