--- a/kubernetes/apps/media/immich/app/server/helmrelease.yaml
+++ b/kubernetes/apps/media/immich/app/server/helmrelease.yaml
@@ -26,7 +26,18 @@ spec:
     controllers:
       immich:
         annotations:
-          reloader.stakater.com/auto: "true"
+          configmap.reloader.stakater.com/reload: &configMap immich-configmap
+          secret.reloader.stakater.com/reload: &secret immich
+        initContainers:
+          01-init-db:
+            envFrom: &envFrom
+              - configMapRef:
+                  name: *configMap
+              - secretRef:
+                  name: *secret
+            image:
+              repository: ghcr.io/onedr0p/postgres-init
+              tag: '16.3'
         strategy: RollingUpdate
         containers:
           app:
@@ -36,13 +47,7 @@ spec:
             env:
               TZ: ${TIMEZONE}
               IMMICH_WORKERS_INCLUDE: api
-            envFrom:
-              - configMapRef:
-                  name: immich-configmap
-              - secretRef:
-                  name: immich-secret
-              - secretRef:
-                  name: immich-db-secret
+            envFrom: *envFrom
             probes:
               liveness: &probes
                 enabled: true
@@ -83,13 +88,7 @@ spec:
             port: 3001
     ingress:
       app:
-        className: traefik-external
-        annotations:
-          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
-          external-dns.alpha.kubernetes.io/exclude-unifi: "true"
-          external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
-          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-          traefik.ingress.kubernetes.io/router.middlewares: "networking-traefik-middleware-chain-no-rate-limit@kubernetescrd"
+        className: internal
         hosts:
           - host: &host "photos.${SECRET_DOMAIN}"
             paths:
@@ -101,25 +100,9 @@ spec:
         tls:
           - hosts:
               - *host
-            secretName: "${SECRET_DOMAIN/./-}-production-tls"
     persistence:
-      config:
-        enabled: true
-        type: configMap
-        name: immich-server-config
-        globalMounts:
-          - path: /config
       library:
-        type: nfs
-        server: ${SECRET_NFS_SERVER}
-        path: /mnt/user/photos
+        enabled: true
+        existingClaim: immich-upload
         globalMounts:
           - path: /usr/src/app/upload
-      geocoding-dump:
-        type: emptyDir
-        globalMounts:
-          - path: /usr/src/app/.reverse-geocoding-dump
-      transformers-cache:
-        type: emptyDir
-        globalMounts:
-          - path: /usr/src/app/.transformers_cache
