--- a/kubernetes/apps/media/immich/ks.yaml
+++ b/kubernetes/apps/media/immich/ks.yaml
@@ -2,15 +2,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app immich
+  name: immich
   namespace: flux-system
 spec:
-  targetNamespace: default
+  targetNamespace: media
   dependsOn:
-    - name: crunchy-pgo-cluster-vector
-    - name: dragonfly-cluster
-    - name: external-secrets-stores
-  path: ./kubernetes/main/apps/default/immich/app
+    - name: cloudnative-pg
+    - name: redis
+  path: ./kubernetes/apps/media/immich/app
   prune: true
   sourceRef:
     kind: GitRepository
