--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -40,6 +40,8 @@ stringData:
     HARBOR_DB_USER: ENC[AES256_GCM,data:A8/xWOh9JBA=,iv:PTt8X98giaH5hpjfCYQllMD9fNb5X8EoXEwMfKHVrtY=,tag:3WmX7XSXz17cEub97DVTDg==,type:str]
     HARBOR_ADMIN_PASSWORD: ENC[AES256_GCM,data:aZNk+qWABVNrKA==,iv:UGzLUsbdr+uR8ZrVrbJN26YAtjAGgqd38Q1UJKG/SOY=,tag:wrNMckae4GrQJzgpfInO2w==,type:str]
     INVIDIOUS_PG_PASSWORD: ENC[AES256_GCM,data:g+OBz0eQf0ussw==,iv:FUO1PXKRH3CR5+b6YqFku3yUwjNNNd6hcegpSWLdswg=,tag:C05p7AyXwSADDhtZ1LBp9w==,type:str]
+    IMMICH_DB_PASS: ENC[AES256_GCM,data:q6vVVFnmGz4xtg==,iv:hiS46wSTur+A7BWnWJW0s0ZdVITTMwGClbyYGhww3yw=,tag:eRvfEFeaOX7598T/M/3Sgg==,type:str]
+    IMMICH_JWT_SECRET: ENC[AES256_GCM,data:dx422nk7UWRb3Jh2MtmDBDRBkw==,iv:WfJfz4hYV/Fo1dFw2IU+XyuL25yvX91oEVRehQ2apQw=,tag:BBu02u+OSdSYK04PTvJW6Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -55,8 +57,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-28T21:18:48Z"
-    mac: ENC[AES256_GCM,data:6zMKLT7fbUb/0Yy1iiw+Fs3j+51jKp1EJxo8oQ+mb5Fj0nNA/o5ZS6bUPRuZ5GWCSpy9GYDDw/dzXNFDVWQxVggCsqtywmon2PqnFLe9yUSUC9+aWwmFFMcOsJwdQRLh4QE2s51+UczpaKkmMgk9/ZeLw5yKyfYb97yhklQ0+Pk=,iv:CMpuheVeOqx4BPqqBPf/qyTWmACLZVOTt9Hp9CwZeFQ=,tag:Kaq2YZ16PKc+NXNUzDRE9w==,type:str]
+    lastmodified: "2024-08-25T23:46:49Z"
+    mac: ENC[AES256_GCM,data:ltv62d11zIeyeXsdkWknGrtZN1SCidDyi74PPc9kboCYp9O/Jdc6kSHI2HDfG+fa8QAAOlnA1bu7tTzrhVaiEmaPzs/NtEFhFbWd3ZT0bHn3sBwbDu5eClcy+Fdzjl8ZWbYdoV/+WIukMItj5sw+jt43VKo1KPnPqLCBrSEtuD0=,iv:XglxTQvhDd0Cf6Z447db4qOWMK8c9SDhZjqfQbuG18E=,tag:YzTweBF3Y1TqLhrcZkmpFQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.1
+    version: 3.9.0
