--- a/kubernetes/apps/observability/victoria-metrics/app/kustomization.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/kustomization.yaml
@@ -4,10 +4,10 @@ kind: Kustomization
 resources:
   - ./helmrelease.yaml
   - ./alertmanagerconfig.yaml
-  - ./scrapes/extrascrapes.yaml
-  - ./scrapes/fluxmonitor.yaml
+  # - ./scrapes/extrascrapes.yaml
+  # - ./scrapes/fluxmonitor.yaml
   # - ./scrapes/vmpodscrape.yaml
-  - ./scrapes/servicescrape.yaml
+  # - ./scrapes/servicescrape.yaml
   # - ./rules/oom.yaml
   # - ./rules/victoria.yaml
   # - ./rules/longhorn.yaml
